[package]
name = "mkcontext"
version = "0.4.0"
edition = "2018"
description = "A crate that provides functionality for creating context"
license = "MIT"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tiktoken-rs = "0.5.7"
clipboard = "0.5.0"
glob = "0.3"
anyhow = "1.0"
rayon = "1.5"