[package]
name = "mkcontext"
version = "0.6.1"
edition = "2018"
description = "A crate that provides functionality for creating context"
license = "MIT"
repository = "https://github.com/matthewrobertbell/mkcontext"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tiktoken-rs = "0.5.7"
clipboard = "0.5.0"
glob = "0.3"
anyhow = "1.0"
rayon = "1.5"
ignore = "0.4"